CSS Alignments Fixed

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -237,25 +237,41 @@
 #sleep-bg:hover {
     background-image: 'linear-gradient(to right, #FCDE72 , #F26D6D)';
 }
-#calories-column.card-container, #step-column.card-container, #water-column.card-container, #sleep-column.card-container {
+#calories-column.card-container, 
+#step-column.card-container, 
+#water-column.card-container, 
+#sleep-column.card-container {
     padding: 0px 0px 20px 20px;
 }
-.e-card.selected .card-text, .e-card.selected .card-value, .e-card.selected #food-img, .e-card.selected #steps-img, .e-card.selected #water-img, .e-card.selected #sleep-img{
+.e-card.selected .card-text, 
+.e-card.selected .card-value, 
+.e-card.selected #food-img, 
+.e-card.selected #steps-img, 
+.e-card.selected #water-img, 
+.e-card.selected #sleep-img{
   color: #FFFFFF !important;
 }
-.e-card.selected#calories, .e-card.selected #calories-bg, .e-card.selected #calories-value{
+.e-card.selected#calories, 
+.e-card.selected #calories-bg, 
+.e-card.selected #calories-value{
   background-image: linear-gradient(45deg, #F23B3B 0%, #EF9027 100%);
   border-radius: 4px;
 }
-.e-card.selected#step, .e-card.selected #step-bg, .e-card.selected #steps-value{
+.e-card.selected#step, 
+.e-card.selected #step-bg, 
+.e-card.selected #steps-value{
   background-image: linear-gradient(45deg, #04AB11 0%, #7DD61D 100%);
   border-radius: 4px;
 }
-.e-card.selected#water, .e-card.selected #water-bg, .e-card.selected #water-value{
+.e-card.selected#water, 
+.e-card.selected #water-bg, 
+.e-card.selected #water-value{
   background-image: linear-gradient(44deg, #2140DC 0%, #00BFD5 100%);
   border-radius: 4px;
 }
-.e-card.selected#sleep, .e-card.selected #sleep-bg, .e-card.selected #sleep-value{
+.e-card.selected#sleep, 
+.e-card.selected #sleep-bg, 
+.e-card.selected #sleep-value{
   background-image: linear-gradient(-135deg, #2925A6 0%, #B250D1 100%) ;
   border-radius: 4px;
 }
@@ -677,7 +693,10 @@ text-align: center;
 }
 @media only screen and (min-width: 200px) and (max-width: 514px) {
     /* For portrait layouts only */
-    #calories-column.card-container, #step-column.card-container, #water-column.card-container, #sleep-column.card-container {
+    #calories-column.card-container, 
+    #step-column.card-container, 
+    #water-column.card-container, 
+    #sleep-column.card-container {
         width: 100%;
         padding: 15px;
     }
